tests/query_errors/pp_unrecognized_token3/error.txt
Error: 
    1 | use foo :: as;
      |            ^^ Found the token `as` but expected one of `<ident>`, `{`
      |               NOTE: It looks like you tried to use 'as' as an ident, consider quoting it as `as` to make it an identifier.